chore: fixed sidebar scrollbar styling to bettter match facebook

--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -6,6 +6,7 @@
   width: 300px;
   background-color: #ffffff;
   overflow: hidden;
+  overflow-y: scroll;
   margin-left: 0;
   border: 2px solid #f0f2f5;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -14,9 +15,6 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.sidebar:hover {
-    overflow-y: scroll;
-}
 
 .sidebar_header_region {
   position: fixed;
@@ -30,7 +28,7 @@
 
 .sidebar_header {
     display: flex;
-    width: 100%;
+    width: calc(100% - 7px);
     height: 30px;
     padding-top: 5px;
 }
@@ -83,25 +81,41 @@
 
 /* width */
 .sidebar::-webkit-scrollbar {
-    width: 7px;
-  }
-  
-  /* Track */
-  .sidebar::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 0; 
-    border-radius: 10px;
-  }
+  width: 7px;
+}
 
-  /* Handle */
-  .sidebar::-webkit-scrollbar-thumb {
-    background: #b1b1b1;
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  .sidebar::-webkit-scrollbar-thumb:hover {
-    background:  #b1b1b1;
-  }
+/* Track */
+.sidebar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0;
+  border-radius: 10px;
+}
+
+/* Handle */
+.sidebar::-webkit-scrollbar-thumb {
+  background: #ffffff; /* Set the default color to white */
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.sidebar:hover::-webkit-scrollbar-thumb {
+  background: #b1b1b1; /* Change the color to #b1b1b1 when hovering */
+}
+
+/* Handle on hover and when scrolling */
+.sidebar:hover::-webkit-scrollbar-thumb:active {
+  background: #b1b1b1; /* Adjust color as needed */
+}
+
+/* Handle when not hovering */
+.sidebar:not(:hover)::-webkit-scrollbar-thumb {
+  background: #ffffff; /* Change the color to white when not hovering */
+}
+
+/* Handle when not hovering and scrolling */
+.sidebar:not(:hover)::-webkit-scrollbar-thumb:active {
+  background: #ffffff; /* Adjust color as needed */
+}
+
 
 .sidebarLink {
 display: flex;
